--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.12.0",
     "cypress": "^12.17.1",
     "cypress-xpath": "^2.0.1"
   },
